<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidCameraServer</string>
    <string name="menu_settings">Settings</string>
    <string name="error_camera">Camera couldn\'t be initialized</string>
    <string name="PortNumber">Port Number</string>
    <string name="port">9999</string>
    <string name="protocol">default</string>
    <string name="ProtocolNumber">protocol</string>
    <string name="ProtocolTitle">Protocol(default, tcp or udp)</string>
    <string name="wakelock">wakelock</string>
    <string name="wakelocktitle">WakeLock</string>
    <string name="lockscreen">lockscreen</string>
    <string name="lockscreentitle">Lock Screen</string>
    <string name="application_reload">Reloading application to apply changes</string>
    

</resources>