<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    

    <PreferenceCategory android:title="ICE Settings">
        
		<EditTextPreference android:defaultValue="@string/port" android:key="@string/PortNumber" android:title="@string/PortNumber"/>
		 <EditTextPreference android:defaultValue="@string/protocol" android:key="@string/ProtocolNumber" android:title="@string/ProtocolTitle"/>    
		 </PreferenceCategory>
    
    <PreferenceCategory android:title="Camera Settings">
        
		
		<ListPreference   android:entries="@array/listOptions" android:entryValues="@array/listValues" android:key="listpref" android:summary="List of resolutions" android:title="List of Resolutions" />    
    </PreferenceCategory>
    <PreferenceCategory android:title="System Settings">
        <CheckBoxPreference android:key="@string/wakelock" android:title="@string/wakelocktitle"/>
    	<CheckBoxPreference android:key="@string/lockscreen" android:title="@string/lockscreentitle"/>    
    </PreferenceCategory>
    
    
</PreferenceScreen>
